# TEMFPA

./: .env.example  .gitignore  READ.me  README.md  notebook.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: ae17d06b5f44_initial_schema.py
frontend/: app.js  index.html  styles.css
frontend/v2/: api.js  error-state.js  formation-impact.js  player-impact.js  prediction-card.js  scorelines.js
src/temfpa/: __init__.py  analytics.py  cli.py  config.py  retrieval.py
src/temfpa/api/: __init__.py  app.py  dependencies.py  schemas.py
src/temfpa/api/routes/: accuracy.py  fixtures.py  leagues.py  predict.py  sync_trigger.py  upcoming.py
src/temfpa/db/: __init__.py  models.py  prediction_log_service.py  seed.py  session.py
src/temfpa/explainability/: __init__.py  factors.py
src/temfpa/features/: __init__.py  formation.py  head_to_head.py  pipeline.py  player_availability.py  team_form.py
src/temfpa/ingestion/: __init__.py  base.py  fbref_adapter.py  football_data_org_adapter.py  matchhistory_adapter.py  router.py  sofascore_adapter.py  sync.py
src/temfpa/models/: __init__.py  elo.py  ensemble.py  evaluation.py  logistic.py  poisson.py  random_forest.py  scoreline.py  trainer.py  xgboost_model.py
src/temfpa/models/saved/: ensemble.joblib  logistic.joblib  poisson.joblib  random_forest.joblib  xgboost.joblib
tests/: conftest.py  test_analytics.py  test_api.py  test_db.py  test_elo.py  test_features.py  test_ingestion.py  test_models.py  test_retrieval.py
