[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temfpa"
version = "0.1.0"
description = "Football data retrieval utilities extracted from the TEMFPA notebook"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=1.5",
  "soccerdata>=1.8",
]

[project.scripts]
temfpa = "temfpa.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
