[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temfpa"
version = "0.1.0"
description = "Football data retrieval utilities extracted from the TEMFPA notebook"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  # V.1 — kept
  "pandas>=1.5",
  "soccerdata>=1.8",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "openpyxl>=3.1",
  # V.2 — new
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic-settings>=2.2",
  "xgboost>=2.0",
  "scipy>=1.12",
  "httpx>=0.27",
  "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.11.0",
]


[project.scripts]
temfpa = "temfpa.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = ["*.ipynb"]

